EEC_InitBackup/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complaint</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Triage</fullName>
        </values>
        <values>
            <fullName>Investigation in Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Incident</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Triage</fullName>
        </values>
        <values>
            <fullName>Investigation in Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Submitted</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SLGSA Injury</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Triage</fullName>
        </values>
        <values>
            <fullName>Investigation in Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Non-Compliance Closure Pending</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actions_Taken__c</fullName>
        <label>Actions Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Investigation_Conclusion__c</fullName>
        <label>Agency Investigation Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>ApprovalStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseApproverUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Me_Or_My_Subordinates__c</fullName>
        <description>Indicates if the case record is assigned to someone in the User&apos;s role hierarchy</description>
        <formula>OR(  Assigned_to_Me__c,  Owner:User.ManagerId =  $User.Id,  Owner:User.Manager.ManagerId = $User.Id)</formula>
        <inlineHelpText>Indicates if the case record is assigned to someone in the User&apos;s role hierarchy</inlineHelpText>
        <label>Assigned To Me Or My Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_User_Is_An_Investigator__c</fullName>
        <formula>CONTAINS(Owner:User.Title, &quot;Investigator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To User Is An Investigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me_For_Triage__c</fullName>
        <description>Will be checked if the Triage responsible is the current user.</description>
        <formula>Triage_Responsible__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me For Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>This flag is used in reports to identify &quot;My&quot; cases</description>
        <formula>$User.Id = OwnerId</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Region_Address__c</fullName>
        <formula>IF( ISBLANK(AccountId), (Unlicensed_Provider_Region__r.Street__c &amp; &quot;, &quot; &amp; Unlicensed_Provider_Region__r.City__c &amp; &quot;, &quot; &amp; Unlicensed_Provider_Region__r.State__c &amp; &quot; &quot; &amp; Unlicensed_Provider_Region__r.Zip__c), (Account.Region__r.Street__c &amp; &quot;, &quot; &amp; Account.Region__r.City__c  &amp; &quot;, &quot; &amp; Account.Region__r.State__c &amp; &quot; &quot; &amp; Account.Region__r.Zip__c  ))</formula>
        <label>Associated Region Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Region_Email__c</fullName>
        <formula>IF( ISBLANK(AccountId), Unlicensed_Provider_Region__r.Email__c, Account.Region__r.Email__c )</formula>
        <label>Associated Region Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Region_Fax__c</fullName>
        <formula>IF( ISBLANK(AccountId), Unlicensed_Provider_Region__r.Fax__c, Account.Region__r.Fax__c )</formula>
        <label>Associated Region Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Region_Phone__c</fullName>
        <description>This field is used in the 5A / 5B template footer</description>
        <formula>IF( ISBLANK(AccountId),  Unlicensed_Provider_Region__r.Phone__c ,  Account.Region__r.Phone__c )</formula>
        <label>Associated Region Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attached_To_Unlicensed__c</fullName>
        <description>This is checked if no provider is attached to the case or if an unlicensed provider is.</description>
        <formula>OR ( ISBLANK( AccountId ),  CONTAINS(Account.Record_Type_Name__c, &quot;Unlicensed&quot;))</formula>
        <label>Attached To Unlicensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Phone_Number_to_use__c</fullName>
        <inlineHelpText>What is the best number to use if we need to contact you at that time?</inlineHelpText>
        <label>Best Phone Number to use</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_time_to_contact__c</fullName>
        <inlineHelpText>What is the best time to contact you during the day if we have questions about your concerns?</inlineHelpText>
        <label>Best time to contact</label>
        <picklist>
            <picklistValues>
                <fullName>8 am to 12 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 pm to 2 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm to 5 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After 5 pm</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CPR_By_Whom__c</fullName>
        <inlineHelpText>Who provided CPR?</inlineHelpText>
        <label>By Whom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_Provided__c</fullName>
        <inlineHelpText>Was CPR provided?</inlineHelpText>
        <label>CPR Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPR_When__c</fullName>
        <inlineHelpText>When was CPR performed?</inlineHelpText>
        <label>When</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Escalated_to_Me__c</fullName>
        <description>This formula is used in Investigation MAnager Dashboard to know the number of cases per month escalated to Investigation Manager.</description>
        <formula>OR( X1st_Escalation_Case_Approver__c =  $User.Id ,  X2nd_Escalation_Case_Approver__c = $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Escalated to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Name__c</fullName>
        <inlineHelpText>Injured child name</inlineHelpText>
        <label>Child Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Transported_for_Medical_Attention__c</fullName>
        <inlineHelpText>Was the child transported for medical attention?</inlineHelpText>
        <label>Child Transported for Medical Attention</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_return_to_Program__c</fullName>
        <inlineHelpText>Did the child return to your program?</inlineHelpText>
        <label>Child return to Program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Circumstances__c</fullName>
        <inlineHelpText>How did injury occur</inlineHelpText>
        <label>Circumstances</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citation_Description__c</fullName>
        <description>Citation Description field stores Regulation description text</description>
        <label>Citation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citation__c</fullName>
        <description>Citation field is used to store the Regulation number</description>
        <inlineHelpText>Enter Regulation number</inlineHelpText>
        <label>Citation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Reasons__c</fullName>
        <label>Closing Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concerns_Identified__c</fullName>
        <description>Concerns identified if any?</description>
        <inlineHelpText>Concerns identified if any?</inlineHelpText>
        <label>Concerns Identified</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <description>Contact Address (= reporter address)</description>
        <formula>IF(Contact.MailingStreet=&quot;&quot;,&quot;&quot;,Contact.MailingStreet &amp; &quot;, &quot; &amp;  Contact.MailingCity &amp; &quot;, &quot; &amp; Contact.MailingState &amp; &quot; &quot; &amp; Contact.MailingPostalCode)</formula>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Phone__c</fullName>
        <description>Contact work phone</description>
        <formula>Contact.OtherPhone</formula>
        <label>Contact Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCF_File_Submission_Date__c</fullName>
        <inlineHelpText>On what specific date was it filed?</inlineHelpText>
        <label>DCF File Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DCF_Filer__c</fullName>
        <inlineHelpText>Who filed the DCF 51A Report?</inlineHelpText>
        <label>DCF File Submitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCF_Investigation_Conclusion__c</fullName>
        <label>DCF Investigation Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCF_Screening_Status__c</fullName>
        <label>DCF Screening Status</label>
        <picklist>
            <picklistValues>
                <fullName>Screened In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screened Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DPPC_File_Submission_Date__c</fullName>
        <description>When was it reported to the DPPC?</description>
        <inlineHelpText>When was it reported to the DPPC?</inlineHelpText>
        <label>DPPC File Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPPC_Filer__c</fullName>
        <description>Who filed the DPPC report</description>
        <inlineHelpText>Who filed the DPPC report</inlineHelpText>
        <label>DPPC Filer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Event_Occured__c</fullName>
        <inlineHelpText>If this is related to a specific event, when did this occur?</inlineHelpText>
        <label>Date Event Occured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_corrective_action__c</fullName>
        <inlineHelpText>Description of any corrective action take to prevent similar occurrence</inlineHelpText>
        <label>Description of corrective action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Resulted__c</fullName>
        <inlineHelpText>What diagnosis resulted from any medical intervention</inlineHelpText>
        <label>Diagnosis Resulted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Involved__c</fullName>
        <inlineHelpText>If applicable, description of equipment involved (location, condition)</inlineHelpText>
        <label>Equipment Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <inlineHelpText>Where did this occur? Inside the program or outside? Which room, building etc.</inlineHelpText>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filed_with_DCF__c</fullName>
        <inlineHelpText>Was a report also filed with the Department of Children and Families (DCF 51A report)?</inlineHelpText>
        <label>Filed with DCF</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filed_with_DPPC__c</fullName>
        <description>Was a report filed with the Disabled Persons Protection Commission (DPPC)(19C)?</description>
        <inlineHelpText>Was a report filed with the Disabled Persons Protection Commission (DPPC)(19C)?</inlineHelpText>
        <label>Filed with DPPC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Aid_By_whom__c</fullName>
        <inlineHelpText>Who provided first aid?</inlineHelpText>
        <label>By whom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Aid_What__c</fullName>
        <inlineHelpText>What first aid was provided?</inlineHelpText>
        <label>What</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Aid_When__c</fullName>
        <inlineHelpText>When was the first aid provided?</inlineHelpText>
        <label>When</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Aid_or_CPR_Provided__c</fullName>
        <inlineHelpText>Was first aid provided?</inlineHelpText>
        <label>First Aid Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foster_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Foster Parent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_the_child_was_in__c</fullName>
        <inlineHelpText>What group was the child in when injury occurred</inlineHelpText>
        <label>Group the child was in</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasInvestigation__c</fullName>
        <formula>NOT(ISNULL(Investigation__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasInvestigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Type__c</fullName>
        <description>Home type (Regular/Restricted)?</description>
        <inlineHelpText>Home type (Regular/Restricted)?</inlineHelpText>
        <label>Home Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Homefinder_Contact_Last_6_Months__c</fullName>
        <description>Dates of contact with Homefinder within last 6 months?</description>
        <inlineHelpText>Dates of contact with Homefinder within last 6 months?</inlineHelpText>
        <label>Homefinder Contact Last 6 Months</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_What_Shared_Info__c</fullName>
        <inlineHelpText>How was this information shared with the child&apos;s parent / guardian</inlineHelpText>
        <label>How / What</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_not_why_not__c</fullName>
        <label>If not, why not?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_what_happened__c</fullName>
        <label>If yes, what happened?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_involves_legal_proceedings__c</fullName>
        <inlineHelpText>Does you report involve legal proceedings?</inlineHelpText>
        <label>Incident involves legal proceedings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intake_Category__c</fullName>
        <description>A case is triaged and assigned an Intake Category</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not regulatory in nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to another EEC department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No non-compliance SLGSA injury</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Investigation may have one or more related Cases</description>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Associated Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_In_My_Region__c</fullName>
        <formula>OR ( Account.Region__r.Name =  TEXT($User.Region__c ),  TEXT($User.Region__c )=  Unlicensed_Provider_Region__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In My Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Provider__c</fullName>
        <formula>Account.OwnerId =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Social_Worker_Home_Visit__c</fullName>
        <description>Last social worker home visit date?</description>
        <inlineHelpText>Last social worker home visit date?</inlineHelpText>
        <label>Last Social Worker Home Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Proceeding_Description__c</fullName>
        <inlineHelpText>Please describe the nature of the legal proceedings and explain who is involved.</inlineHelpText>
        <label>Legal Proceeding Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Licensor_s_Manager_Email__c</fullName>
        <label>Licensor&apos;s Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>List_of_Restrictions__c</fullName>
        <description>List of restrictions?</description>
        <inlineHelpText>List of restrictions?</inlineHelpText>
        <label>List of Restrictions</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MAPP_Training_Date__c</fullName>
        <description>MAPP training date?</description>
        <inlineHelpText>MAPP training date?</inlineHelpText>
        <label>MAPP Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Med_AttentionWhere__c</fullName>
        <inlineHelpText>Where was the child transported for medical attention</inlineHelpText>
        <label>Where</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_Attention_By_whom__c</fullName>
        <inlineHelpText>By whom was the child transported for medical attention</inlineHelpText>
        <label>By whom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Treatment_Provided__c</fullName>
        <inlineHelpText>What medical treatment was provided?</inlineHelpText>
        <label>Medical Treatment Provided</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Reevaluation__c</fullName>
        <description>Most recent re-evaluation date?</description>
        <inlineHelpText>Most recent re-evaluation date?</inlineHelpText>
        <label>Most Recent Reevaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Qual_of_staff_supervising__c</fullName>
        <inlineHelpText>Names &amp; qualifications of staff supervising the group when injury occurred?</inlineHelpText>
        <label>Name &amp; Qual of staff supervising</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nature_of_complaint__c</fullName>
        <inlineHelpText>What is the nature of the complaint (what happened)?</inlineHelpText>
        <label>Nature of Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_children_in_group__c</fullName>
        <inlineHelpText>Number of children in the group?</inlineHelpText>
        <label>No. children in group</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_To_User2__c</fullName>
        <defaultValue>&quot;If the Reporter is another Provider, delete the Name that appears in the Provider Information section before saving. If you don&apos;t delete this information, it will be automatically replaced with information that correctly identifies this complaint as being associated with unlicensed care in your region.&quot;</defaultValue>
        <description>user note in Reporter information, under Contact Name field</description>
        <label>Note To User</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_To_User__c</fullName>
        <defaultValue>&apos;Details about any involved persons (adults and children) must be entered into the Involved Persons Related List. You will have access to this Related List after this Case record has been saved.&apos;</defaultValue>
        <inlineHelpText>Please review the information in the Note To User</inlineHelpText>
        <label>Note To User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_allegations__c</fullName>
        <label>Number of allegations</label>
        <summaryForeignKey>Cases_Allegations__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Observation__c</fullName>
        <description>Observation field is used to store Licensor&apos;s observations on the citation</description>
        <inlineHelpText>EEC resource who intakes the case would fill this out with his/her own observation</inlineHelpText>
        <label>Observation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Home_Study__c</fullName>
        <description>Original Home Study date?</description>
        <inlineHelpText>Original Home Study date?</inlineHelpText>
        <label>Original Home Study</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified_How__c</fullName>
        <inlineHelpText>How was this other person notified?</inlineHelpText>
        <label>How</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified_When__c</fullName>
        <inlineHelpText>When was this other person notified?</inlineHelpText>
        <label>When</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified_Who__c</fullName>
        <inlineHelpText>Who else was notified?</inlineHelpText>
        <label>Who</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified__c</fullName>
        <inlineHelpText>Was anyone else notified?</inlineHelpText>
        <label>Other Person Notified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Relationship__c</fullName>
        <inlineHelpText>Please enter the relationship you have with the provider</inlineHelpText>
        <label>Other Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <inlineHelpText>What is the best way to contact you?</inlineHelpText>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Address_For_Email_Merge__c</fullName>
        <description>Calculate the provider name depending if it&apos;s licensed or unlicensed. This is used for merging with email.</description>
        <formula>IF( OR(ISNULL(AccountId), ISBLANK(AccountId)),  IF(Unlicensed_Provider_Street__c=&quot;&quot;, &quot;&quot;, Unlicensed_Provider_Street__c &amp; &quot;, &quot;) &amp;   Unlicensed_Provider_City__r.Name  &amp; &quot;, MA &quot; &amp;  Unlicensed_Provider_Zip_Code__c ,  Provider_Address__c )</formula>
        <label>Provider Address For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address__c</fullName>
        <formula>IF( OR(ISNULL(AccountId), ISBLANK(AccountId)), &quot;&quot; , Account.Provider_Address_1__c  &amp; IF(Account.Provider_Address_2__c=&quot;&quot;, &quot;&quot;, &quot;, &quot; &amp;  Account.Provider_Address_2__c) &amp; &quot;, &quot; &amp;   Account.Provider_City__r.Name  &amp; &quot;, &quot; &amp;  TEXT(Account.State__c) &amp; &quot; &quot; &amp;  Account.Provider_Zip_Code__c)</formula>
        <label>Provider Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Email_Hidden__c</fullName>
        <description>Populates from Provider_Email (which is a formula field) into this field so it can be used in email alerts.</description>
        <label>Provider Email (Hidden)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <formula>Account.Provider_Email__c</formula>
        <label>Provider Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name_For_Email_Merge__c</fullName>
        <description>Calculate the provider name depending if it&apos;s licensed or unlicensed. This is used for merging with email.</description>
        <formula>IF( OR(ISNULL(AccountId), ISBLANK(AccountId)),  Unlicensed_Provider_Name__c ,  Account.Name )</formula>
        <label>Provider Name For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <label>Provider Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Issue_Known__c</fullName>
        <inlineHelpText>How do you know about this situation?</inlineHelpText>
        <label>Reason Issue Known</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Detailed_Investigation__c</fullName>
        <inlineHelpText>Fill this field if you request Regional Director and Deputy Commissioner review in order to have this case investigated by an investigator</inlineHelpText>
        <label>Reason for Detailed Investigation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_to_Report_Now__c</fullName>
        <inlineHelpText>If your concerns happened more than a month ago, what is prompting you to contact EEC at this time?</inlineHelpText>
        <label>Reason to Report Now</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Phone__c</fullName>
        <formula>IF( ISBLANK(AccountId), Unlicensed_Provider_Region__r.Phone__c , Account.Region__r.Phone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field used in Email Template</inlineHelpText>
        <label>Region Phone</label>
        <type>Text</type>
    </fields>
</CustomObject>